# ovo-mypy-plugin

./: .gitignore  .travis.yml  LICENCE  README.rst  mypy_test.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ovo_mypy_plugin/: plugin.py
ovo_mypy_plugin/tests/: mypy_test.ini  test.py
ovo_mypy_plugin/typesafety/: test_ovo_field_types.yml
ovo_stub/oslo_versionedobjects/: __init__.pyi  base.pyi  fields.pyi
