[metadata]
name = ovo-mypy-plugin
summary = Mypy plugin for oslo_versionedobject
description-file =
    README.rst
author = Balazs Gibizer
author-email = balazs.gibizer@gmail.com
home-page = https://github.com/gibizer/ovo-mypy-plugin
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    ovo_mypy_plugin

[bdist_wheel]
universal=1
